feat: :sparkles: Desktop menu with JS

--- a/index.html
+++ b/index.html
@@ -4,24 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YarsSale</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Quicksand:wght@300;500;700&family=Shadows+Into+Light&family=Silkscreen&display=swap" rel="stylesheet">
-    <style>
-        :root {
-           --very-light-pink: #767474;
-           --hospital-green: #acd9b2;
-           --text-input-field: #f7f7f7;
-           --white: #ffffff;
-           --black: #000000;
-        }
-        body {
-            font-family: 'Quicksand', sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css"/>
+    <script src="https://kit.fontawesome.com/81fd9d3b63.js" crossorigin="anonymous"></script>
+    <script defer src="./main.js"></script>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <img src="./Platzi_YardSale_Icons/icon_menu.svg" alt="menu" class="menu" />
     
+            <section class="navbar-left">
+                <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" alt="logo de yard sale" class="logo" />
+                <ul>
+                    <li><a href="">All</a></li>
+                    <li><a href="">Clothes</a></li>
+                    <li><a href="">Electronics</a></li>
+                    <li><a href="">Furniture</a></li>
+                    <li><a href="">Toys</a></li>
+                    <li><a href="">Others</a></li>
+                </ul>
+            </section>
+            <section class="navbar-right">
+                <ul>
+                    <li class="email">
+                        <p>youremail@example.com</p>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </li>
+                    <li class="navbar-shopping-cart">
+                        <img src="./Platzi_YardSale_Icons/icon_shopping_cart.svg" alt="Shopping cart" class="shopping-cart" />
+                        <div>2</div>
+                    </li>
+                </ul>
+            </section>
+            <div class="desktop-menu inactive">
+                <ul>
+                    <li>
+                        <a href="/" class="title">My orders</a>
+                    </li>
+                <ul>
+                    <li>
+                        <a href="/">My account</a>
+                    </li>
+                <ul>
+                    <li>
+                        <a href="/">Sign out</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
