feat: :art: Add mobile-menu to the index

--- a/index.html
+++ b/index.html
@@ -55,7 +55,33 @@
                     </li>
                 </ul>
             </div>
+            
         </nav>
+        <div class="mobile-menu inactive">
+            <div class="categories">
+                <h1>CATEGORIES</h1>
+                <ul>
+                    <li><a href="/">All</a></li>
+                    <li><a href="/">Clothes</a></li>
+                    <li><a href="/">Electronics</a></li>
+                    <li><a href="/">Furnitures</a></li>
+                    <li><a href="/">Toys</a></li>
+                    <li><a href="/">Others</a></li>
+                </ul>
+            </div>
+            <div class="Myself">
+                <ul>
+                    <li><a href="/">My orders</a></li>
+                    <li><a href="/">My account</a></li>
+                </ul>
+            </div>
+            <div class="sign-out-container">
+                <ul>
+                    <li><p>youremail@example.com</p></li>
+                    <li><a href="/">Sign out</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
 </body>
 </html>
