feat: :sparkles: Add card conteiner using JS

--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
                 </ul>
             </div>
         </div>
-    </header>
-    <main>
         <div class="my-order-container inactive">
             <div class="title-container">
                 <i class="fa-solid fa-arrow-left"></i>
@@ -124,6 +122,10 @@
             <button class="primary-button checkout-button">
                 Checkout
             </button>
+        </div>
+    </header>
+    <main>
+        <div class="cards-container">
         </div>
     </main> 
 </body>
