feat: :sparkles: Add ProductDetail

--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
     <main>
         <div class="cards-container">
         </div>
+        <aside class="product-detail inactive">
+            <div class="product-photo">
+                <img src="./Platzi_YardSale_Icons/icon_close.png" alt="close" class="product-detail-close"/>
+                <img src="./Products_imgs/skate.jpg" alt="generic skate" class="product-img"/>
+                <div class="points"><i class="fa-solid fa-ellipsis"></i></div>
+            </div>
+    
+            <div class="product-info">
+                <p>$100.00</p>
+                <p>Skate</p>
+                <p>That's the most common skateboard. Unlike other types of boards, it reaches lower speeds, however it is its design that makes it perfect for performing tricks, generally on ramps.</p>
+            </div>
+    
+            <button class="primary-button add-to-cart-button">
+                <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="shopping cart icon" />
+                Add to cart
+            </button>
+        </aside>
     </main> 
 </body>
 </html>
