fix: :fire: Remove Images from .gitignore

--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
             </div>
             <div class="my-order-shopping-cart">
                 <div class="product-on-cart">
-                    <img src="./Products_imgs/skate.jpg" alt="skateboard amarilla" class="product-img" />
+                    <img src="./Images/skate.jpg" alt="skateboard amarilla" class="product-img" />
                     <p>Skate</p>
                     <p id="price">$100.00</p>
                     <img src="./Platzi_YardSale_Icons/icon_close.png" alt="icon close" class="icon-close"/>
                 </div>
                 <div class="product-on-cart">
-                    <img src="./Products_imgs/skate.jpg" alt="skateboard amarilla" class="product-img" />
+                    <img src="./Images/skate.jpg" alt="skateboard amarilla" class="product-img" />
                     <p>Skate</p>
                     <p id="price">$100.00</p>
                     <img src="./Platzi_YardSale_Icons/icon_close.png" alt="icon close" class="icon-close"/>
                 </div>
                 <div class="product-on-cart">
-                    <img src="./Products_imgs/skate.jpg" alt="skateboard amarilla" class="product-img" />
+                    <img src="./Images/skate.jpg" alt="skateboard amarilla" class="product-img" />
                     <p>Skate</p>
                     <p id="price">$100.00</p>
                     <img src="./Platzi_YardSale_Icons/icon_close.png" alt="icon close" class="icon-close"/>
                 </div>
                 <div class="product-on-cart">
-                    <img src="./Products_imgs/skate.jpg" alt="skateboard amarilla" class="product-img" />
+                    <img src="./Images/skate.jpg" alt="skateboard amarilla" class="product-img" />
                     <p>Skate</p>
                     <p id="price">$100.00</p>
                     <img src="./Platzi_YardSale_Icons/icon_close.png" alt="icon close" class="icon-close"/>
@@ -130,7 +130,7 @@
         <aside class="product-detail inactive">
             <div class="product-photo">
                 <img src="./Platzi_YardSale_Icons/icon_close.png" alt="close" class="product-detail-close"/>
-                <img src="./Products_imgs/skate.jpg" alt="generic skate" class="product-img"/>
+                <img src="./Images/skate.jpg" alt="generic skate" class="product-img"/>
                 <div class="points"><i class="fa-solid fa-ellipsis"></i></div>
             </div>
     
